[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neat-neat"
version = "0.0.1"
authors = [{ name = "Ian Sodersjerna", email = "ian@sodersjerna.com" }]
description = "An implementation of the NEAT algorithm in Python because I think NEAT is neat."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/plop91/neat-neat"
Issues = "https://github.com/plop91/neat-neat/issues"
